--- a/foodscrape.ipynb
+++ b/foodscrape.ipynb
@@ -220,7 +220,10 @@
    "id": "0bd06ee8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# convert dataframe into csv file\n",
+    "#recipes.to_csv(r'filepath\\recipes.csv')"
+   ]
   }
  ],
  "metadata": {
