--- a/foodscrape.ipynb
+++ b/foodscrape.ipynb
@@ -11,7 +11,8 @@
     "import numpy as np\n",
     "import requests\n",
     "import re\n",
-    "import csv "
+    "import csv \n",
+    "import config "
    ]
   },
   {
@@ -34,7 +35,7 @@
    "source": [
     "#insert the apikey and what parameters I wanted to restrict the data pull\n",
     "#for the first 100 points pulled the carbs are 0-30\n",
-    "params={\"apiKey\":apikey.txt,\n",
+    "params={\"apiKey\":config.api_key,\n",
     "        \"minProtein\":15,\n",
     "        \"maxCarbs\":30,\n",
     "        \"number\":100}#note that the spoonacular api will only let you pull atmost 100 data points each time"
@@ -92,7 +93,7 @@
    "outputs": [],
    "source": [
     "#create more parameters to get 100 more datapoints with 30-50 carbs\n",
-    "params2={\"apiKey\":apikey.txt,\n",
+    "params2={\"apiKey\":config.api_key,\n",
     "        \"minProtein\":15,\n",
     "        \"minCarbs\":30, #here the min and max carbs are updated compared to the previous call to get a wider range of data\n",
     "        \"maxCarbs\":50,\n",
@@ -129,7 +130,7 @@
    "outputs": [],
    "source": [
     "#create parameters of 50-95 carbs for the last 100 datapoints pulled\n",
-    "params3={\"apiKey\":apikey.txt,\n",
+    "params3={\"apiKey\":config.api_key,\n",
     "        \"minProtein\":15,\n",
     "        \"minCarbs\":50,\n",
     "        \"maxCarbs\":95,\n",
@@ -228,7 +229,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -243,6 +244,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "17148b80536a9518b3c217100db44d9bbf858b2c0861d2db315eb0a1b18cdf91"
+   }
   }
  },
  "nbformat": 4,
