--- a/foodscrape.ipynb
+++ b/foodscrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "31bb3350",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "import requests\n",
     "import re\n",
     "import csv \n",
-    "import config "
+    "import config #use this package to call the config.py file you made with your apikey in it"
    ]
   },
   {
