--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Spoonacular Recipes Nutrients EDA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -10,6 +17,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read in and looked at the data"
    ]
   },
   {
@@ -156,6 +170,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cleaned up the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -254,7 +275,7 @@
     }
    ],
    "source": [
-    "#recipe.info()\n",
+    "#Dropped the image columns since you can't really use them for analysis\n",
     "recipes=recipe.drop(columns=['Unnamed: 0','image','imageType'])\n",
     "recipes.head()"
    ]
@@ -282,7 +303,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#Checked to see if there are any na's to deal with\n",
     "recipes.isna().sum()"
    ]
   },
@@ -292,6 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Removing the 'g' in some columns and renaming them \n",
     "recipes['protein (gram)']=recipes['protein'].str.replace('g','').astype(int)\n",
     "recipes['fat (gram)']=recipes['fat'].str.replace('g','').astype(int)\n",
     "recipes['carbs (gram)']=recipes['carbs'].str.replace('g','').astype(int)"
@@ -323,8 +345,16 @@
     }
    ],
    "source": [
+    "#Removed columns and check the info to make sure the data is how I want it\n",
     "final=recipes.drop(columns=['protein','fat','carbs'])\n",
     "final.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Started the EDA"
    ]
   },
   {
@@ -763,7 +793,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at barplots of top 7 \n"
+    "Looking at barplots of top 7 dishes with Protein, Carbs, and Calories (since people tend to care about them more)\n"
    ]
   },
   {
@@ -795,6 +825,7 @@
     }
    ],
    "source": [
+    "#Top 7 dishes with Protein Barplot\n",
     "sns.barplot(\n",
     "    x='protein (gram)',\n",
     "    y='title',\n",
@@ -831,6 +862,7 @@
     }
    ],
    "source": [
+    "#Top 7 dishes with Carbs Barplot\n",
     "sns.barplot(\n",
     "    x='carbs (gram)',\n",
     "    y='title',\n",
@@ -867,6 +899,7 @@
     }
    ],
    "source": [
+    "#Top 7 dishes with Calories Barplot\n",
     "sns.barplot(\n",
     "    x='calories',\n",
     "    y='title',\n",
@@ -910,6 +943,7 @@
     }
    ],
    "source": [
+    "#Calories by protein scatterplot\n",
     "sns.scatterplot(x='calories',y='protein (gram)', data=final)"
    ]
   },
@@ -942,6 +976,7 @@
     }
    ],
    "source": [
+    "#Calories by fat scatterplot\n",
     "sns.scatterplot(x='calories',y='fat (gram)', data=final)\n"
    ]
   },
@@ -974,6 +1009,7 @@
     }
    ],
    "source": [
+    "#Calories by carbs scatterplot\n",
     "sns.scatterplot(x='calories',y='carbs (gram)', data=final)"
    ]
   },
@@ -1006,7 +1042,9 @@
     }
    ],
    "source": [
+    "#Carbs by fat scatterplot\n",
     "sns.scatterplot(x='carbs (gram)',y='fat (gram)', data=final)\n",
+    "\n",
     "#I assumed there would be a more linear relationship here that the more carbs\n",
     "# you have the more fat you have but this proves that wrong"
    ]
@@ -1040,6 +1078,7 @@
     }
    ],
    "source": [
+    "#Carbs by protein scatterplot\n",
     "sns.scatterplot(x='carbs (gram)',y='protein (gram)', data=final)"
    ]
   },
@@ -1072,7 +1111,9 @@
     }
    ],
    "source": [
+    "#Protein by fat scatterplot\n",
     "sns.scatterplot(x='protein (gram)',y='fat (gram)', data=final)\n",
+    "\n",
     "#I am not sure what is happening here but it is interesting. There may be a sort of interaction"
    ]
   },
@@ -1119,37 +1160,6 @@
     "#It looks like the negative correlation is between carbs and protein\n",
     "#There appears to be a weak positive correlation between carbs and fat\n",
     "#The highest positive correlation is between fat and calories, which was seen from the scatterplots earlier."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "meat=[]\n",
-    "for i in final['title']:\n",
-    "    if 'chicken' in i:\n",
-    "        meat.append('True')\n",
-    "        if 'beef' in i:\n",
-    "            meat.append('True')\n",
-    "        elif 'ham' in i:\n",
-    "            meat.append('True')\n",
-    "        elif 'turkey' in i:\n",
-    "            meat.append('True')\n",
-    "        elif 'pork' in i:\n",
-    "            meat.append('True')\n",
-    "        elif 'lamb' in i:\n",
-    "            meat.append('True')\n",
-    "        elif 'duck' in i:\n",
-    "            meat.append('True')\n",
-    "        elif 'fish' in i:\n",
-    "            meat.append('True')\n",
-    "        else:\n",
-    "            meat.append('False')\n",
-    "    else:\n",
-    "        meat.append('False')\n",
-    "            "
    ]
   }
  ],
